--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NutriTracker</string>
+    <string name="welcome">Welcome to NutriTrack!</string>
+    <string name="addGoal">To continue add a Calorie-Goal:</string>
+    <string name="goal">Enter goal</string>
+    <string name="save">Save goal and continue</string>
 </resources>
