add http request to recipe api and save functions for consumed calories

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="goal">Enter goal</string>
     <string name="save">Save goal and continue</string>
     <string name="goalTextViewValue" />
-    <string name="alreadyConsumedViewValue" />
+    <string name="alreadyConsumedViewValue">0</string>
     <string name="addConsumedCaloriesHintValue">Enter your Calories you have consumed so far.</string>
     <string name="addCaloriesFieldHint">Add calories</string>
     <string name="saveCalories">Add Calories</string>
